cmake_minimum_required(VERSION 3.15)
project(Learning_Projects)

set(CMAKE_CXX_STANDARD 14)

add_executable(Learning_Projects
        #CA-02-QuadraticEq/CA-02-QuadraticEq.cpp
        CA-03-DollarConversion/CA-03-DollarConversion.cpp
        #CA-Block-Letters/CA-Block-Letters.cpp
        #PS-VS-001/PS-VS-001.cpp
        )
